# algorithms

./: .flake8  .gitignore  .pre-commit-config.yaml  .pyspelling.yaml  LICENSE  Makefile  README.md  codecov.yaml  pyproject.toml
.github/workflows/: code-vulnerabilities.yaml  commitlint.yaml  continuous-integration.yaml  pre-commit.yaml  test-suite.yaml
solutions/: __init__.py
solutions/coin_change/: __init__.py  brute_force_solution.py  efficient_solution.py
solutions/fibonacci_last_digit/: __init__.py  brute_force_solution.py  efficient_solution.py
solutions/fibonacci_numbers/: __init__.py  brute_force_solution.py  efficient_solution.py
solutions/fibonacci_sum_squares_last_digit/: __init__.py  brute_force_solution.py  efficient_solution.py
solutions/greatest_common_divisor/: __init__.py  brute_force_solution.py  efficient_solution.py
solutions/greedy/: __init__.py
solutions/huge_fibonacci_modulus/: brute_force_solution.py  efficient_solution.py
solutions/least_common_multiple/: __init__.py  brute_force_solution.py  efficient_solution.py
solutions/mathematical/: __init__.py
solutions/maximum_pairwise_product/: __init__.py  brute_force_solution.py  efficient_solution.py
solutions/modulo_huge_fibonacci/: __init__.py  efficient_solution.py
solutions/modulus_huge_fibonacci/: __init__.py  brute_force_solution.py  efficient_solution.py
solutions/partial_sum_fibonacci_last_digit/: __init__.py  brute_force_solution.py  efficient_solution.py
solutions/sum_fibonacci_last_digit/: __init__.py  brute_force_solution.py  efficient_solution.py
tests/: __init__.py  config.yaml  measure_performance.py  read_config.py
tests/coin_change/: stress_tests_params.py  test_brute_force_solution.py  test_efficient_solution.py
tests/fibonacci_last_digit/: __init__.py  test_brute_force_solution.py  test_efficient_solution.py
tests/fibonacci_numbers/: __init__.py  test_brute_force_solution.py  test_efficient_solution.py
tests/fibonacci_sum_squares_last_digit/: test_brute_force_solution.py  test_efficient_solution.py
tests/greatest_common_divisor/: __init__.py  stress_tests_params.py  test_brute_force_solution.py  test_efficient_solution.py
tests/least_common_multiple/: stress_tests_params.py  test_brute_force_solution.py  test_efficient_solution.py
tests/maximum_pairwise_product/: __init__.py  stress_tests_params.py  test_brute_force_solution.py  test_efficient_solution.py
tests/modulo_huge_fibonacci/: test_brute_force_solution.py  test_efficient_solution.py
tests/modulus_huge_fibonacci/: stress_tests_params.py  test_brute_force_solution.py  test_efficient_solution.py
tests/partial_sum_fibonacci_last_digit/: stress_tests_params.py  test_brute_force_solution.py  (+1 more)
(+76 files in other folders)
