[tool.poetry]
name = "py-algorithms"
version = "0.1.0"
description = "Fun with algorithms and data structures"
authors = ["Pablo Barbero <pablo.barbero.domeno@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.12.1"
pytest-benchmark = "^3.4.1"
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^20.8b1"
isort = "^5.7.0"
pydocstyle = "^6.1.1"
pyspelling = "^2.7.3"
pre-commit = "^2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
