[tool.poetry]
name = "py-algorithms"
version = "0.1.0"
description = "Fun with algorithms and data structures"
authors = ["Pablo Barbero <pablo.barbero.domeno@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.12.1"
pytest-benchmark = "^3.4.1"
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^20.8b1"
isort = "^5.7.0"
pydocstyle = "^6.1.1"
pyspelling = "^2.7.3"
pycln = "^1.1.0"
pre-commit = "^2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38', 'py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pydocstyle]
inherit = false
convention = "numpy"

[tool.pycln]
all = true
